src/objects/inscor__Docking__c.object
<CustomObject>
    <fields>
        <fullName>inscor__AWB__c</fullName>
        <label>AWB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Doc_Line__c</fullName>
        <label>Doc Line #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Docked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Docked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Docked_Date__c</fullName>
        <label>Docked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Docked__c</fullName>
        <label>Quantity Docked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Line</label>
        <referenceTo>inscor__RMA_Line__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>inscor__RMA__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Qty_Allocated__c</fullName>
        <label>Total Qty Allocated</label>
        <summarizedField>inscor__Docking_Line__c.inscor__Quantity_Allocated__c</summarizedField>
        <summaryForeignKey>inscor__Docking_Line__c.inscor__Docking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Qty_Docked__c</fullName>
        <label>Total Qty Docked</label>
        <summarizedField>inscor__Docking_Line__c.inscor__Quantity_Docked__c</summarizedField>
        <summaryForeignKey>inscor__Docking_Line__c.inscor__Docking__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>inscor__Work_Order__c</referenceTo>
        <relationshipLabel>Dockings</relationshipLabel>
        <relationshipName>Dockings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Docking</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DK-{000}</displayFormat>
        <label>Docking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dockings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>